fix spacing for visibility indicator

--- a/imports/plugins/included/default-theme/client/styles/products/productGrid.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productGrid.less
@@ -322,6 +322,10 @@
   .more-options-container {
     position: relative;
   }
+
+  .rui.btn {
+    margin-left: 5px;
+  }
 }
 
 .product-grid-badges {
